syntax = "proto3";
package coreum.feemodel.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/feemodel/types";

// Params stores parameters defining fee model of coreum blockchain
// There are four regions on the fee model curve
// - between 0 and "long average block gas" where gas price goes down exponentially from InitialGasPrice to gas price with maximum discount (InitialGasPrice * (1 -MaxDiscount))
// - between "long average block gas" and EscalationStartBlockGas where we offer gas price with maximum discount all the time
// - between EscalationStartBlockGas and MaxBlockGas where price goes up rapidly (being an output of a power function) from gas price with maximum discount to MaxGasPrice
// - above MaxBlockGas (if it happens for any reason) where price is equal to MaxGasPrice
//
// The input (x value) for that function is calculated by taking short block gas average.
// Price (y value) being an output of the fee model is used as the minimum gas price for next block.
message Params {
  option (gogoproto.goproto_stringer) = false;

  // initial_gas_price is used when block gas short average is 0. It happens when there are no transactions being broadcasted. This value is also used to initialize gas price on brand-new chain.
  string initial_gas_price = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"initial_gas_price\""];

  // max_gas_price is used when block gas short average is greater than or equal to MaxBlockGas. This value is used to limit gas price escalation to avoid having possible infinity GasPrice value otherwise.
  string max_gas_price = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"max_gas_price\""];

  // max_discount is th maximum discount we offer on top of initial gas price if short average block gas is between long average block gas and escalation start block gas.
  string max_discount = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"max_discount\""];

  // escalation_start_block_gas defines block gas usage where gas price escalation starts if short average block gas is higher than this value.
  int64 escalation_start_block_gas = 4 [(gogoproto.moretags) = "yaml:\"escalation_start_block_gas\""];

  // max_block_gas sets the maximum capacity of block. This is enforced on tendermint level in genesis configuration. Once short average block gas goes above this value, gas price is a flat line equal to MaxGasPrice.
  int64 max_block_gas = 5 [(gogoproto.moretags) = "yaml:\"max_block_gas\""];

  // short_ema_block_length defines inertia for short average long gas in EMA model. The equation is: NewAverage = ((ShortAverageBlockLength - 1)*PreviousAverage + GasUsedByCurrentBlock) / ShortAverageBlockLength
  // The value might be interpreted as the number of blocks which are taken to calculate the average. It would be exactly like that in SMA model, in EMA this is an approximation.
  uint32 short_ema_block_length = 6 [(gogoproto.moretags) = "yaml:\"short_ema_block_length\""];

  // long_ema_block_length defines inertia for long average block gas in EMA model. The equation is: NewAverage = ((LongAverageBlockLength - 1)*PreviousAverage + GasUsedByCurrentBlock) / LongAverageBlockLength
  // The value might be interpreted as the number of blocks which are taken to calculate the average. It would be exactly like that in SMA model, in EMA this is an approximation.
  uint32 long_ema_block_length = 7 [(gogoproto.moretags) = "yaml:\"long_ema_block_length\""];
}
